--- a/web/index.html
+++ b/web/index.html
@@ -33,25 +33,25 @@
 				<li>
 					<i class="open-logo"></i>
 					<div>
-					<h3>网易公开课</h3>
-					<p>推出国内外名校公开课，涉及广泛的学科，名校老师认真讲解深度剖析，网易视频公开课频道搭建起强有力的网络视频教学平台。</p>
-					<a href="http://open.163.com/">了解更多&gt;</a>
+						<h3>网易公开课</h3>
+						<p>推出国内外名校公开课，涉及广泛的学科，名校老师认真讲解深度剖析，网易视频公开课频道搭建起强有力的网络视频教学平台。</p>
+						<a href="http://open.163.com/">了解更多&gt;</a>
 					</div>
 				</li>
 				<li>
 					<i class="study-logo"></i>
 					<div>
-					<h3>云课堂</h3>
-					<p>网易旗下大型在线学习平台，该平台面向学习者提供海量免费、优质课程,创新的个性化学习体验，自由开放的交流互动环境。</p>
-					<a href="http://study.163.com/">了解更多&gt;</a>
+						<h3>云课堂</h3>
+						<p>网易旗下大型在线学习平台，该平台面向学习者提供海量免费、优质课程,创新的个性化学习体验，自由开放的交流互动环境。</p>
+						<a href="http://study.163.com/">了解更多&gt;</a>
 					</div>
 				</li>
 				<li>
 					<i class="mooc-logo"></i>
 					<div>
-					<h3>中国大学MOOC</h3>
-					<p>是爱课程网携手云课堂打造的在线学习平台，每一个有提升愿望的人都可以在这里学习中国最好的大学课程，学完还能获得认证证书。</p>
-					<a href="http://www.icourse163.org/">了解更多&gt;</a>
+						<h3>中国大学MOOC</h3>
+						<p>是爱课程网携手云课堂打造的在线学习平台，每一个有提升愿望的人都可以在这里学习中国最好的大学课程，学完还能获得认证证书。</p>
+						<a href="http://www.icourse163.org/">了解更多&gt;</a>
 					</div>
 				</li>
 			</ul>
@@ -383,89 +383,93 @@
 					<!-- 课程列表 -->
 
 					<!-- 翻页器 -->
-					<div><i>&lt;</i><i>1</i><i>2</i><i>3</i><i>4</i><i>5</i><i>6</i><i>7</i><i>8</i><i>&gt;</i></div>
+					<div class="turn-page"><i>&lt;</i><div class="pageno"><i>1</i><i>2</i><i>3</i><i>4</i><i>5</i><i>6</i><i>7</i><i>8</i></div><i>&gt;</i></div>
 					<!-- 翻页器 -->
 				</div>
 				<div class="right">
 				    <!-- 机构介绍 -->
-					<h4>机构介绍</h4>
-					<p>观看下面的视频来了解吧:<video></video></p>
+				    <div class="agency">
+						<h4>机构介绍</h4>
+						<p>观看下面的视频来了解吧 :<img src="res/images/jigou.jpg"></p>
+					</div>
 					<!-- 机构介绍 -->
 
 					<!-- 最热排行 -->
-					<h4>最热排行</h4>
-					<ul>
-						<li>
-							<img src="#">
-							<div>
-								<h5>舞曲揭秘</h5>
-							    <span>21657</span>
-							</div>
-						</li>
-						<li>
-							<img src="#">
-							<div>
-								<h5>舞曲揭秘</h5>
-							    <span>21657</span>
-							</div>
-						</li>
-						<li>
-							<img src="#">
-							<div>
-								<h5>舞曲揭秘</h5>
-							    <span>21657</span>
-							</div>
-						</li>
-						<li>
-							<img src="#">
-							<div>
-								<h5>舞曲揭秘</h5>
-							    <span>21657</span>
-							</div>
-						</li>
-						<li>
-							<img src="#">
-							<div>
-								<h5>舞曲揭秘</h5>
-							    <span>21657</span>
-							</div>
-						</li>
-						<li>
-							<img src="#">
-							<div>
-								<h5>舞曲揭秘</h5>
-							    <span>21657</span>
-							</div>
-						</li>
-						<li>
-							<img src="#">
-							<div>
-								<h5>舞曲揭秘</h5>
-							    <span>21657</span>
-							</div>
-						</li>
-						<li>
-							<img src="#">
-							<div>
-								<h5>舞曲揭秘</h5>
-							    <span>21657</span>
-							</div>
-						</li>
-						<li>
-							<img src="#">
-							<div>
-								<h5>舞曲揭秘</h5>
-							    <span>21657</span>
-							</div>
-						</li>
-						<li>
-							<img src="#">
-							<div>
-								<h5>舞曲揭秘</h5>
-							    <span>21657</span>
-							</div>
-						</li>
-					</ul>
+					<div class="hot-rank">
+						<h4>最热排行</h4>
+						<ul>
+							<li>
+								<img src="#">
+								<div>
+									<h5>舞曲揭秘</h5>
+								    <span>21657</span>
+								</div>
+							</li>
+							<li>
+								<img src="#">
+								<div>
+									<h5>舞曲揭秘</h5>
+								    <span>21657</span>
+								</div>
+							</li>
+							<li>
+								<img src="#">
+								<div>
+									<h5>舞曲揭秘</h5>
+								    <span>21657</span>
+								</div>
+							</li>
+							<li>
+								<img src="#">
+								<div>
+									<h5>舞曲揭秘</h5>
+								    <span>21657</span>
+								</div>
+							</li>
+							<li>
+								<img src="#">
+								<div>
+									<h5>舞曲揭秘</h5>
+								    <span>21657</span>
+								</div>
+							</li>
+							<li>
+								<img src="#">
+								<div>
+									<h5>舞曲揭秘</h5>
+								    <span>21657</span>
+								</div>
+							</li>
+							<li>
+								<img src="#">
+								<div>
+									<h5>舞曲揭秘</h5>
+								    <span>21657</span>
+								</div>
+							</li>
+							<li>
+								<img src="#">
+								<div>
+									<h5>舞曲揭秘</h5>
+								    <span>21657</span>
+								</div>
+							</li>
+							<li>
+								<img src="#">
+								<div>
+									<h5>舞曲揭秘</h5>
+								    <span>21657</span>
+								</div>
+							</li>
+							<li>
+								<img src="#">
+								<div>
+									<h5>舞曲揭秘</h5>
+								    <span>21657</span>
+								</div>
+							</li>
+						</ul>
+					</div>
 					<!-- 最热排行 -->
 				</div>
 		    </div>	
@@ -475,25 +479,26 @@
 	<!-- 主内容区 -->
 
 	<!-- 页脚 -->
-	<div>
+	<div class="footer">
 		<div>
-			<span>&copy;2014 icourse163.org 浙ICP备08114786号-1</span>
-			<span>icourses.cn 京ICP备12020869号-2 京公网安备110102000459-2</span>
+			<i></i>
+			<p>&copy;2014 icourse163.org 浙ICP备08114786号-1<br>
+			icourses.cn 京ICP备12020869号-2 京公网安备110102000459-2</p>
 		</div>
-		<ul>
-			<li>友情链接:</li>
+		<ul class="link">
+			<li>友情链接 :</li>
 			<li><a href="http://open.163.com/">网易公开课</a></li>
 			<li><a href="http://study.163.com/">网易云课堂</a></li>
 			<li><a href="http://www.icourse163.org">中国大学MOOC</a></li>
 		</ul>
-		<ul>
-			<li>我们:</li>
+		<ul class="we">
+			<li>我们 :</li>
 			<li>关于</li>
 			<li>联系</li>
-			<li>关注</li>
+			<li class="care">关注</li>
 		</ul>
-		<ul>
-			<li>更多:</li>
+		<ul class="more">
+			<li>更多 :</li>
 			<li>常见问题</li>
 			<li>意见反馈</li>
 		</ul>
