--- a/web/src/widget/banner/banner.html
+++ b/web/src/widget/banner/banner.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<title>banner</title>
 	<style type="text/css">
-		body{width: 1616px;}
+		body{width: 100%;}
 		body,div,a,img,i{border: 0;margin: 0;padding: 0;}
 		.banner{height: 460px;position: relative;}
+		.banner img{width: 100%;height: 460px;}
 		.banner .pointer{height: 10px;position: absolute;left: 50%;bottom: 20px;margin-left: -31.5px;}
 		.banner .pointer i{display: inline-block;width: 10px;height: 10px;margin: 0 5.5px;border-radius: 5px;vertical-align: top;background: white;}
 		.banner .pointer i:first-child{background: black;}
